<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeMade.Startup.FirstTime">

    <Spinner
        android:id="@+id/first_time_lang_drop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@android:drawable/spinner_dropdown_background"
        android:backgroundTint="#514B4B"
        android:backgroundTintMode="src_in"
        android:contentDescription="@string/ChooseLanguage"
        android:dropDownSelector="@android:drawable/btn_dropdown"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/yesFirstTimeBtn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="11dp"
        android:background="@drawable/xml_small_blue"
        android:text="@string/yes"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/noFirstTimeBtn"
        app:layout_constraintTop_toBottomOf="@+id/first_time_lang_drop"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/noFirstTimeBtn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/xml_small_orange"
        android:text="@string/no"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/yesFirstTimeBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_time_lang_drop"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/first_time_tvc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/transparent"
        android:fontFamily="@font/advent_pro_semibold"
        android:text="@string/first_time_yes_no"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/first_time_lang_drop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>