<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pubpriv_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".HomeMade.Startup.PublicPrivate">

    <TextView
        android:id="@+id/public_room_btn_txt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/public_btn_bg_pp"
        android:fontFamily="@font/advent_pro_semibold"
        android:gravity="center_horizontal|center_vertical"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/public_room_btn"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="52sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/private_room_btn_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/private_room_btn_txt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/private_btn_bg_pp"
        android:fontFamily="@font/advent_pro_semibold"
        android:gravity="center_horizontal|center_vertical"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/private_room_btn"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="52sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/solo_room_btn_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/public_room_btn_txt" />


    <TextView
        android:id="@+id/solo_room_btn_txt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/solo_btn_bg_pp"
        android:fontFamily="@font/advent_pro_semibold"
        android:gravity="center_horizontal|center_vertical"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/solo_room_btn"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="52sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/private_room_btn_txt"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <View
        android:id="@+id/blocking_view_pp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="#000000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tut_tv_info_pp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:background="@color/background"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/advent_pro_semibold"
        android:shadowColor="#373737"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1.6"
        android:text="@string/tut_mess_0"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/tut_info"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/public_room_btn_txt" />

    <Button
        android:id="@+id/tut_btn_stop_pp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/xml_small_orange"
        android:text="@string/tut_stop"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/tut_btn_next_pp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tut_tv_info_pp" />

    <Button
        android:id="@+id/tut_btn_next_pp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/xml_small_blue"
        android:text="@string/tut_next"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tut_btn_stop_pp"
        app:layout_constraintTop_toBottomOf="@+id/tut_tv_info_pp" />

</androidx.constraintlayout.widget.ConstraintLayout>